get rid of client-side filtering [ci]
